# render-kit

./: README.md  pyproject.toml
src/render_kit/: __init__.py  __main__.py  batch.py  cli.py  presets.py  product.py  social.py  video.py  voice.py
src/render_kit/engines/: __init__.py  pil.py  replicate.py
templates/: ig_carousel.json  ig_square.json
tests/: test_product.py
